# hatchet-quickstart-agentic

./: .gitignore  LICENSE  README.md  slack-manifest.yaml  start_all.sh
backend/: README.md  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py
backend/src/models/: slack_event.py
backend/src/workflows/: general_response_workflow.py  hatchet.py  main.py  meeting_planning_workflow.py  openai.py  orchestrator_workflow.py  slack_client.py
